syntax = "proto3";

package proto; 
option go_package = ".;proto";
service Blockchain{
    rpc Addbblock(AddBlockRequest) returns (AddBlockResponse){}
    rpc GetBlockChain(GetBlockRequest) returns (GetBlockResponse){}
}

message AddBlockRequest{
    string data = 1;
}

message AddBlockResponse{
    string hash = 1;
}

message Block {
	string prevBlockHash = 1;
	string data = 2;
	string hash = 3;
}

message GetBlockRequest {}

message GetBlockResponse {
	repeated Block blocks = 1;
}